@@ -356,6 +356,9 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
   edit box scroll position preserve/restore behaviour
 * (bug 10805) Fix "undo" link when viewing the diff of the most recent
   change to a page using "diff=0"
+* img_auth.php now interacts properly with $wgWhitelistRead
+* (bug 10765) img_auth.php will now forbid access to images if $wgWhitelistRead
+  is not set to an array
 
 == API changes since 1.10 ==
 
